<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="#fff"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/tv_video"
        style="@style/SlideTextStyle"
        android:text="@string/camera_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_take"
        style="@style/SlideTextStyle"
        android:text="@string/camera_take"
        app:layout_constraintLeft_toRightOf="@id/tv_video"
        app:layout_constraintTop_toTopOf="@id/tv_video" />

    <TextView
        android:id="@+id/tv_style"
        style="@style/SlideTextStyle"
        android:text="@string/camera_style"
        android:textColor="#DD90FA"
        app:layout_constraintLeft_toRightOf="@id/tv_take"
        app:layout_constraintTop_toTopOf="@id/tv_video" />

    <ImageView
        android:id="@+id/iv_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:src="@drawable/shape_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_video, tv_take, tv_style, iv_indicator" />

</androidx.constraintlayout.widget.ConstraintLayout>