<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rv_scan_face"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp">

        <android.opengl.GLSurfaceView
            android:id="@+id/id_gl_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/iv_scan_face"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/bg_scan_face"/>

        <TextView
            android:id="@+id/tv_tips2"
            android:layout_width="90dp"
            android:layout_height="21dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="112dp"
            android:layout_centerHorizontal="true"
            android:text="把脸移入圈内"
            android:textSize="15dp"
            android:visibility="invisible"
            android:textColor="#ffffff"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="30dp"
        android:layout_height="21dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/faceshape_exit"
        android:textSize="15dp"
        android:textColor="#323334"/>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_below="@+id/rv_scan_face"
        android:layout_marginTop="30dp"
        android:text="@string/faceshape_tip2"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="#6e6e6e"/>

    <ImageView
        android:id="@+id/iv_scan_face_done"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/rv_scan_face"
        android:visibility="invisible"
        tools:visibility="visible"
        android:src="@mipmap/face_shape_done"/>

    <TextView
        android:id="@+id/tv_scan_face_done"
        android:layout_width="180dp"
        android:layout_height="21dp"
        android:layout_below="@+id/iv_scan_face_done"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        tools:visibility="visible"
        android:text="@string/faceshape_success"
        android:textSize="15dp"
        android:visibility="invisible"
        android:textColor="#6e6e6e"/>

</RelativeLayout>
