<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_lip_width"
        android:layout_width="match_parent"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_height="60dp"
        tools:background="#000"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/tv_lip_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tryon_lip_line_width"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <sensetime.senseme.com.effects.view.widget.TextThumbSeekBar
            android:id="@+id/tb_lip_width"
            style="@style/TextThumbSeekBarStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_lip_width"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:background="#000"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/tv_strength1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tryon_strength"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <sensetime.senseme.com.effects.view.widget.TextThumbSeekBar
            android:id="@+id/tb_strength"
            style="@style/TextThumbSeekBarStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_strength1"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tryon_highlight"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <sensetime.senseme.com.effects.view.widget.TextThumbSeekBar
            android:id="@+id/tb_light"
            style="@style/TextThumbSeekBarStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_light"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gp_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="tv_strength1, tb_strength" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/gp_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="tv_light, tb_light" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
